synaptic (0.63.2) UNRELEASED; urgency=low

  * po/uk.po:
    - updated, thanks to Serhij Dubyk 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:13:45 +0100

synaptic (0.63.1) unstable; urgency=low

  * po/pt_BR.po:
    - Updated pt_BR.po, thanks to Sergio Cipolla (closes: #561853)
  * po/sk.po:
    - Updated sk.po, thanks to helix84 (closes: #559283)
  * po/uk.po
    - add ukrainian translation, thanks to Serhij Dubyk 
  * common/rpackageview.{cc,h}:
    - remember search history accross package transactions
  * make the origin filter more fine grained
  * gtk/rgsummarywindow.cc:
    - move the gtk_tree_view_set_model() down to speed up the
      operation
  * gtk/rgdebinstallprogress.cc:
    - on error, set error string into status label
    - when the recovery is run (dpkg --configure -a) display a 
      proper status label for that
  * gtk/rgaboutpanel.cc:
    - fix FTBFS with gcc-4.5 (closes: #565077)
  * additions to the (internal) API
  * gtk/rgdebinstallprogress.cc:
    - make the dpkg progress code less cpu intensive

 -- Michael Vogt <mvo@debian.org>  Thu, 11 Feb 2010 19:58:40 +0100

synaptic (0.63) unstable; urgency=low

  * common/rpackage.h:
    - fix segfault with latest apt
  * common/sections_trans.cc:
    - fix typo in gnu-r section description
  * po/fr.po:
    - updated, thanks to Stéphane Blondon, closes: #543981
  * po/sl.po:
    - updated, thanks to Matej Urbančič
  * take the "Origin" field from the release file into account
    when looking for supported packages
  * gtk/rgfetchprogress.{cc,h}:
    - remove the custom progress rendering and replace with
      stock gtk progress
  * gtk/glade/dialog_conffile.glade:
    - make the conffile dialog resizable (LP: #228928)
  * gtk/rgdebinstallprogress.cc:
    - use fixed size font on conffile changes

 -- Michael Vogt <mvo@debian.org>  Wed, 21 Oct 2009 11:19:56 +0200

synaptic (0.62.8) unstable; urgency=low

  * debian/control:
    - add build-conflict against librpm-dev