@@ -1,7 +1,13 @@
 synaptic (0.63.2) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * po/uk.po:
     - updated, thanks to Serhij Dubyk 
+  
+  [ Jean-Baptiste Lallement ]
+  * Fix sorting issues of the package list
+    - Fix sort by name and by section (LP: #518509)
+    - Improve sort by column performance
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:13:45 +0100
 
